--- a/src/app/pet/pet-detail/pet-detail.component.scss
+++ b/src/app/pet/pet-detail/pet-detail.component.scss
@@ -21,6 +21,12 @@
     .sold {
       color: red;
     }
+
+    img {
+      max-width: 50%;
+      max-height: 50%;
+      margin: auto;
+    }
   }
 
   .no-pet-selected {
