--- a/src/app/pet/pet-list/pet-list-item/pet-list-item.component.html
+++ b/src/app/pet/pet-list/pet-list-item/pet-list-item.component.html
@@ -1,3 +1,3 @@
-<div class="pet-list-item" [ngClass]="{'selected' : pet === selectedPet}" >
+<div class="pet-list-item" [ngClass]="{selected : pet === selectedPet}" >
   <p>{{pet.name | titlecase}}</p>
 </div>
