--- a/src/app/pet/pet-list/pet-list-item/pet-list-item.component.scss
+++ b/src/app/pet/pet-list/pet-list-item/pet-list-item.component.scss
@@ -6,15 +6,10 @@
   text-align: center;
   cursor: pointer;
 
-  &:hover {
+  &:hover, &.selected {
     background-color: blueviolet;
     color: white;
   }
 
 
-}
-
-.selected {
-  background-color: blueviolet;
-  color: white;
 }
