--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<div class="navbar"></div>
+<div class="navbar">
+
+    <button (click)="onTogglePetCreation()">Créer / Consulter</button>
+
+</div>
