--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="navbar">
     <app-navbar></app-navbar>
   </div>
+  <router-outlet></router-outlet>
   <div class="content">
     <app-pet></app-pet>
   </div>
