--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,4 +2,7 @@
 
     <button (click)="onTogglePetCreation()">Créer / Consulter</button>
 
+    <a routerLink="home">Home Component</a>
+    <a routerLink="pet">Pet Component</a>
+
 </div>
