--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
 
-    <button (click)="onTogglePetCreation()">Créer / Consulter</button>
+    <!-- <button (click)="onTogglePetCreation()">Créer / Consulter</button> -->
 
     <a routerLink="home">Home Component</a>
     <a routerLink="pet">Pet Component</a>
