--- a/src/app/pet/pet-index/pet-list/pet-list.component.html
+++ b/src/app/pet/pet-index/pet-list/pet-list.component.html
@@ -1,3 +1,4 @@
 <div class="pet-list">
+  <button (click)="onClickNouveau()">Nouveau</button>
   <app-pet-list-item *ngFor="let pet of petList" (click)="onClickPet(pet.id)" [pet]="pet"></app-pet-list-item>
 </div>
