--- a/src/app/pet/pet-index/pet-index.component.html
+++ b/src/app/pet/pet-index/pet-index.component.html
@@ -1,6 +1,8 @@
 <div class="pet-index">
     <div class="pet-read-container">
       <app-pet-list></app-pet-list>
-      <app-pet-detail></app-pet-detail>
+      <div class="router-outlet">
+        <router-outlet></router-outlet>
+      </div>
     </div>
 </div>
