--- a/src/app/pet/pet-index/pet-index.component.scss
+++ b/src/app/pet/pet-index/pet-index.component.scss
@@ -5,7 +5,7 @@
       height: 100%;
       display: flex;
 
-      app-pet-list, app-pet-detail {
+      app-pet-list, .router-outlet {
         padding: 10px;
       }
 
@@ -13,7 +13,7 @@
         flex: 1;
       }
 
-      app-pet-detail {
+      .router-outlet {
         flex: 2;
       }
     }
