--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,10 @@ body {
   font-family: 'Helvetica Neue', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
 
+.btn-nav {
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  color: white;
+  background-color: violet;
+}
